--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -1445,8 +1445,8 @@
     "message": "Only block ads on these sites:",
     "description": "Label for textbox where user enters a list of sites on Customize tab"
   },
-  "format_site1_site2_site3": {
-    "message": "Format: ~site1.com|~site2.com|~news.site3.org",
+  "format": {
+    "message": "Format:",
     "description": "Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
   },
   "warning_overrules_filters": {
@@ -2030,7 +2030,7 @@
     "description": "DO NOT TRANSLATE The text on the popup menu when an error has occurred"
   },
   "error_msg_help_us_partI": {
-    "message": "Help us resolve this problem  ",
+    "message": "Help us resolve this problem ",
     "description": "DO NOT TRANSLATE"
   },
   "error_msg_help_us_partII": {
@@ -3388,5 +3388,29 @@
   "always": {
     "message": "Always",
     "description": "The button text on the popup menu"
+  },
+  "enable_on_this_site": {
+    "message": "Enable AdBlock On This Site",
+    "description": "GFC messaging on the popup menu"
+  },
+  "premium_access_without_disabling": {
+    "message": "New features in AdBlock Premium make it easy to get access to the content you love without disabling AdBlock.",
+    "description": "GFC messaging on the popup menu"
+  },
+  "dont_show_reminder": {
+    "message": "Don’t show me this reminder again",
+    "description": "GFC messaging on the popup menu"
+  },
+  "want_stop_seeing": {
+    "message": "Want To Stop Seeing These?",
+    "description": "GFC messaging on the popup menu"
+  },
+  "access_without_disabling": {
+    "message": "Get easy access to the content you love without disabling AdBlock!",
+    "description": "GFC messaging on the popup menu"
+  },
+  "learn_more_lower": {
+    "message": "Learn more",
+    "description": "GFC messaging on the popup menu"
   }
 }
