--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -79,8 +79,16 @@
     "message": "要隐藏按钮，请右击并选择“从工具栏移除”。可在 Firefox 菜单下的“定制”的恢复显示。",
     "description": "Message explaining how to hide the AdBlock toolbar button. 'Remove from Toolbar' should match the text that Firefox displays when you right click a toolbar button, and 'Customize' should match the text that shows when you click the button on the Firefox toolbar with three lines."
   },
+  "isithidden": {
+    "message": "该项目是否已隐藏？",
+    "description": "'Block an ad' wizard usage explanation"
+  },
   "sliderexplanation": {
-    "message": "移动滑块直到页面上的广告被正确地拦截，且被拦截的元素看起来无误。",
+    "message": "如果没有，请使用滑块隐藏此页面上的附加项目：",
+    "description": "'Block an ad' wizard usage explanation"
+  },
+  "sliderwarning": {
+    "message": "请注意，隐藏页面上的过多内容可能会破坏某些功能",
     "description": "'Block an ad' wizard usage explanation"
   },
   "slidertitle": {
@@ -88,20 +96,26 @@
     "description": "'Block an ad' wizard title"
   },
   "blacklisteroptions1": {
-    "message": "你认为下列哪些规则能将此广告拦截？",
+    "message": "始终隐藏此项目？",
     "description": "'Block an ad' wizard attribute choice page"
   },
-  "blacklisternotsure": {
-    "message": "不确定对不对？直接点击下方的“拦截它”即可。",
+  "blacklisternotsure_part_I": {
+    "message": "您的设置中将添加一条规则，该规则会在您每次访问该网站时隐藏此项目。",
     "description": "'Block an ad' wizard attribute choice page"
   },
-  "blacklisterthefilter": {
-    "message": "即将应用的规则如下，你仍然可以在“选项”页面中编辑：",
+  "blacklisternotsure_part_II": {
+    "message": "您随时都可以通过从AdBlock菜单中选择“撤消我在此页面上隐藏的项目”来撤消此操作。",
     "description": "'Block an ad' wizard attribute choice page"
   },
-  "blacklisteroptionstitle": {
-    "message": "最后一步：如何将其归为广告？",
-    "description": "'Block an ad' wizard title"
+  "hiddenelementmessagecount": {
+    "message": "此页面上另外还有$count$个项目也被暂时隐藏",
+    "description": "The total number of ads or 'things' hidden on a page by the new rule.",
+    "placeholders": {
+      "count": {
+        "content": "$1",
+        "example": "2"
+      }
+    }
   },
   "blacklisternofilter": {
     "message": "未指定拦截规则！",
@@ -138,6 +152,10 @@
         "example": "DIV"
       }
     }
+  },
+  "warning": {
+    "message": "警告",
+    "description": "Warns the user about an error."
   },
   "blacklistersinglematch": {
     "message": "页面上匹配到 1 个项目。",
@@ -179,20 +197,24 @@
     "message": "返回",
     "description": "Back to previous page button"
   },
-  "block_something_else": {
-    "message": "拦截其他内容",
-    "description": "Button text on page 3 of the hiding wizard"
+  "add_info": {
+    "message": "其他信息",
+    "description": "section title on hidding wizard, shown when advance user option enabled"
+  },
+  "confirm_msg": {
+    "message": "确认此项目的类型和ID正确无误：",
+    "description": "text on hidding wizard, shown when advance user option enabled"
   },
   "findingads": {
     "message": "正在查找广告...\n\n只需要一点时间。",
     "description": "'Block an ad' wizard loading message"
   },
   "blockanadtitle": {
-    "message": "拦截广告",
+    "message": "AdBlock隐藏向导",
     "description": "Title of the first two dialogs of the 'Block an ad' wizard"
   },
   "clickthead": {
-    "message": "点击广告，我将协助你拦截。",
+    "message": "点击此页面上您要隐藏的任意项目。",
     "description": "User has to click the ad they want to block."
   },
   "adblock_wont_run_on_pages_matching": {
@@ -210,6 +232,10 @@
   "buttonexclude": {
     "message": "排除",
     "description": "Button for excluding a domain in the allowlist wizard"
+  },
+  "buttonconfirm": {
+    "message": "确认",
+    "description": "Button for confirming a new rule in the hiding wizard"
   },
   "reloadpageafterwhitelist": {
     "message": "重新加载页面。",
@@ -2843,6 +2869,10 @@
     "message": "了解更多",
     "description": "Text in the aria-label attribute of an icon linking to extra information about an option."
   },
+  "find_out_more": {
+    "message": "了解更多",
+    "description": "Text in the button on the Premium CTA on the hiding wizard."
+  },
   "update_filter_lists_now": {
     "message": "立即更新拦截规则列表",
     "description": "Text in the aria-label attribute of the 'update now' button on the Options page in the Filter Lists tab."
@@ -2935,20 +2965,24 @@
     "message": "您刚刚将一个网站加入了您的允许列表！",
     "description": "Part 1 of a call-to-action on the allowlist wizard"
   },
+  "dont_show_me_again": {
+    "message": "不再显示此消息",
+    "description": "opt out option on all-to-action on the blocklist / hiding wizard"
+  },
   "never_lose_settings": {
     "message": "借助“备份与同步”功能，您可以将此设置应用于所有设备，并确保不会丢失AdBlock设置。",
     "description": "Part 2 of a call-to-action on the allowlist and blocklist wizards"
   },
-  "successfully_blocked_ad": {
-    "message": "您已成功拦截此广告。",
+  "wizard_premium_cta_title": {
+    "message": "嘿，看来您可能会喜欢AdBlock Premium",
     "description": "Part of a message on the blocklist wizard"
   },
-  "future_ads_blocked": {
-    "message": "符合这些规则的广告在未来会继续被拦截。",
+  "wizard_premium_cta_part_I": {
+    "message": "您刚刚拦截了此网站上的某些内容。",
     "description": "Part of a message on the blocklist wizard"
   },
-  "rule_added_filters": {
-    "message": "以下规则已添加到您的拦截规则中：",
+  "wizard_premium_cta_part_II": {
+    "message": "借助“备份与同步”功能，您可以将此首选项应用于所有设备，并确保不会丢失AdBlock设置。",
     "description": "Part of a message on the blocklist wizard"
   },
   "blocked_something": {
@@ -3354,5 +3388,29 @@
   "always": {
     "message": "总是如此",
     "description": "The button text on the popup menu"
+  },
+  "enable_on_this_site": {
+    "message": "在此网站上启用AdBlock",
+    "description": "GFC messaging on the popup menu"
+  },
+  "premium_access_without_disabling": {
+    "message": "AdBlock Premium的新功能使您无需禁用AdBlock，即可轻松访问您喜欢的内容。",
+    "description": "GFC messaging on the popup menu"
+  },
+  "dont_show_reminder": {
+    "message": "不再显示此提醒",
+    "description": "GFC messaging on the popup menu"
+  },
+  "want_stop_seeing": {
+    "message": "不想再看到这些？",
+    "description": "GFC messaging on the popup menu"
+  },
+  "access_without_disabling": {
+    "message": "无需禁用AdBlock，即可轻松访问您喜欢的内容！",
+    "description": "GFC messaging on the popup menu"
+  },
+  "learn_more_lower": {
+    "message": "了解更多",
+    "description": "GFC messaging on the popup menu"
   }
 }
