--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -79,8 +79,16 @@
     "message": "若要隱藏按鈕，請以右鍵按下並選擇「從工具列刪除」。若要重新顯示，可以從 Firefox 功能表 -> 「自訂」設定。",
     "description": "Message explaining how to hide the AdBlock toolbar button. 'Remove from Toolbar' should match the text that Firefox displays when you right click a toolbar button, and 'Customize' should match the text that shows when you click the button on the Firefox toolbar with three lines."
   },
+  "isithidden": {
+    "message": "該項目隱藏起來了嗎？",
+    "description": "'Block an ad' wizard usage explanation"
+  },
   "sliderexplanation": {
-    "message": "滑動直到頁面上已正確阻擋廣告，而且被阻擋的元素看起來可使用。",
+    "message": "如果未隱藏，滑動即可隱藏頁面上額外的項目：",
+    "description": "'Block an ad' wizard usage explanation"
+  },
+  "sliderwarning": {
+    "message": "務必小心，頁面隱藏太多項目可能會使某些功能無法正常運作",
     "description": "'Block an ad' wizard usage explanation"
   },
   "slidertitle": {
@@ -88,20 +96,26 @@
     "description": "'Block an ad' wizard title"
   },
   "blacklisteroptions1": {
-    "message": "每次您造訪此頁面時，您認為這個廣告的性質是什麼？",
+    "message": "是否保持該項目隱藏？",
     "description": "'Block an ad' wizard attribute choice page"
   },
-  "blacklisternotsure": {
-    "message": "不確定嗎？只要按下方的「擋住它！」就可以了。",
+  "blacklisternotsure_part_I": {
+    "message": "您的設定將新增一條規則，如此一來，每次您造訪該網站，就會隱藏該項目。",
     "description": "'Block an ad' wizard attribute choice page"
   },
-  "blacklisterthefilter": {
-    "message": "可在「選項」頁更改的過濾條件：",
+  "blacklisternotsure_part_II": {
+    "message": "您可隨時在 AdBlock 選單上選取「復原本頁面上的隱藏項目」，即可取消這條規則。",
     "description": "'Block an ad' wizard attribute choice page"
   },
-  "blacklisteroptionstitle": {
-    "message": "最後一步：這個為什麼是廣告？",
-    "description": "'Block an ad' wizard title"
+  "hiddenelementmessagecount": {
+    "message": "$count$ 本頁面上其他項目也暫時隱藏",
+    "description": "The total number of ads or 'things' hidden on a page by the new rule.",
+    "placeholders": {
+      "count": {
+        "content": "$1",
+        "example": "2"
+      }
+    }
   },
   "blacklisternofilter": {
     "message": "未指定過濾條件！",
@@ -138,6 +152,10 @@
         "example": "DIV"
       }
     }
+  },
+  "warning": {
+    "message": "警告",
+    "description": "Warns the user about an error."
   },
   "blacklistersinglematch": {
     "message": "與此頁面上的 1 個項目符合。",
@@ -179,20 +197,24 @@
     "message": "返回",
     "description": "Back to previous page button"
   },
-  "block_something_else": {
-    "message": "阻擋其他項目",
-    "description": "Button text on page 3 of the hiding wizard"
+  "add_info": {
+    "message": "額外資訊",
+    "description": "section title on hidding wizard, shown when advance user option enabled"
+  },
+  "confirm_msg": {
+    "message": "確認該項目的類型與 ID 正確：",
+    "description": "text on hidding wizard, shown when advance user option enabled"
   },
   "findingads": {
     "message": "尋找廣告……\n\n只需要一下子。",
     "description": "'Block an ad' wizard loading message"
   },
   "blockanadtitle": {
-    "message": "阻擋廣告",
+    "message": "AdBlock 隱藏協助精靈",
     "description": "Title of the first two dialogs of the 'Block an ad' wizard"
   },
   "clickthead": {
-    "message": "按一下廣告，我會教您如何阻擋它。",
+    "message": "按一下本頁面上任何想隱藏的項目。",
     "description": "User has to click the ad they want to block."
   },
   "adblock_wont_run_on_pages_matching": {
@@ -210,6 +232,10 @@
   "buttonexclude": {
     "message": "排除",
     "description": "Button for excluding a domain in the allowlist wizard"
+  },
+  "buttonconfirm": {
+    "message": "確認",
+    "description": "Button for confirming a new rule in the hiding wizard"
   },
   "reloadpageafterwhitelist": {
     "message": "重新載入頁面。",
@@ -2843,6 +2869,10 @@
     "message": "進一步了解",
     "description": "Text in the aria-label attribute of an icon linking to extra information about an option."
   },
+  "find_out_more": {
+    "message": "深入了解",
+    "description": "Text in the button on the Premium CTA on the hiding wizard."
+  },
   "update_filter_lists_now": {
     "message": "更新過濾清單",
     "description": "Text in the aria-label attribute of the 'update now' button on the Options page in the Filter Lists tab."
@@ -2935,20 +2965,24 @@
     "message": "您剛剛將網站加到了允許名單中！",
     "description": "Part 1 of a call-to-action on the allowlist wizard"
   },
+  "dont_show_me_again": {
+    "message": "別再顯示此訊息",
+    "description": "opt out option on all-to-action on the blocklist / hiding wizard"
+  },
   "never_lose_settings": {
     "message": "將此設定套用到所有裝置，並使用「備份與同步」以確保您不會遺失您的 AdBlock 設定。",
     "description": "Part 2 of a call-to-action on the allowlist and blocklist wizards"
   },
-  "successfully_blocked_ad": {
-    "message": "您已成功阻擋這個廣告。",
+  "wizard_premium_cta_title": {
+    "message": "嘿，看來您可能會喜歡 AdBlock Premium",
     "description": "Part of a message on the blocklist wizard"
   },
-  "future_ads_blocked": {
-    "message": "以後將會繼續阻擋符合這些規則的廣告。",
+  "wizard_premium_cta_part_I": {
+    "message": "您剛剛阻擋了這個網站上的內容。",
     "description": "Part of a message on the blocklist wizard"
   },
-  "rule_added_filters": {
-    "message": "以下規則已加入您的過濾條件中：",
+  "wizard_premium_cta_part_II": {
+    "message": "將此偏好套用到所有裝置，並使用「備份與同步」以確保您不會遺失您的 AdBlock 設定。",
     "description": "Part of a message on the blocklist wizard"
   },
   "blocked_something": {
@@ -3354,5 +3388,29 @@
   "always": {
     "message": "一律採用",
     "description": "The button text on the popup menu"
+  },
+  "enable_on_this_site": {
+    "message": "在本網站啟用 AdBlock",
+    "description": "GFC messaging on the popup menu"
+  },
+  "premium_access_without_disabling": {
+    "message": "AdBlock Premium 的新功能讓您不須停用 AdBlock，就能輕鬆存取喜歡的內容。",
+    "description": "GFC messaging on the popup menu"
+  },
+  "dont_show_reminder": {
+    "message": "別再顯示此提醒",
+    "description": "GFC messaging on the popup menu"
+  },
+  "want_stop_seeing": {
+    "message": "不想再看到這些內容？",
+    "description": "GFC messaging on the popup menu"
+  },
+  "access_without_disabling": {
+    "message": "不須停用 AdBlock，就能輕鬆存取喜歡的內容！",
+    "description": "GFC messaging on the popup menu"
+  },
+  "learn_more_lower": {
+    "message": "進一步了解",
+    "description": "GFC messaging on the popup menu"
   }
 }
