--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,7 +2,11 @@
 
 UNRELEASED:
 
-Version: 4.32.1, Date: 2021-04-12
+Version: 4.33.0, Date: 2021-04-30
+- Updated Translations
+- Improved the layout of the AdBlock menu and options pages for right to left languages such as Arabic and Hebrew
+- Fixed the color of hyperlinks on the AdBlock menu
+- Continue to show /update page for those users that haven't seen the Spring 2021 update
 
 Version: 4.32.0, Date: 2021-04-04
 - Show the /update page to let users know what features have been updated in the last 6 months.
